# django-payid-server

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml
DJpayId/: asgi.py  settings.py  urls.py  wsgi.py
payId/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
payId/migrations/: 0001_initial.py
payId/tests/: test_api.py
