[tool.poetry]
name = "django-payid-server"
version = "0.1.0"
description = "Simple Django-based PayId reference server"
authors = ["Rock Howard <rockmhoward@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.8"
djangorestframework = "^3.11.0"
payid-validator = {path = "../python-payid-validator"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
